# onyx-finance

./: .gitignore  CMakeLists.txt  Dockerfile  finance_2_years_growth.csv  finance_5_years.csv  fly.toml  railway.toml  render.yaml  sample_hdfc_statement.csv  setup.sh  test_portfolio_statement.csv  year_transactions.csv
backend/: main.cpp
backend/database/: db.cpp  db.h
backend/models/: transaction.h  user.h
backend/routes/: ai.cpp  ai.h  auth.cpp  auth.h  budget.cpp  budget.h  goals.cpp  goals.h  import.cpp  import.h  news.cpp  news.h  portfolio.cpp  portfolio.h  transactions.cpp  transactions.h
frontend/: add.html  analytics.html  app.js  budget.html  chat.html  goals.html  import.html  index.html  login.html  news.html  portfolio.html  portfolio_import.csv  report.html  signup.html  style.css
